# kb-support-agent-service

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  agent.py  build.sh  config.py  main.py  prompt.py  pyproject.toml  requirements.txt  setup.py
agents/: anonymous_customer_agent_router.py  anonymous_ticket_creation_sub_agent.py  anonymous_ticket_support_sub_agent.py  certificate_issue_sub_agent.py  custom_agent_router.py  generic_sub_agent.py  platform_services_sub_agent.py  ticket_creation_sub_agent.py  ticket_management_sub_agent.py  user_profile_info_sub_agent.py  user_profile_update_sub_agent.py
config/: config.py  feedback.psql  karmayogi_db.psql  log_management_cron  ollama_performance_optimisation_bash
fronend/: README.md  streamlit_chat.py
iGOTassistant/: __init__.py  agent.py  agent_fastapi.py  main.py  prompt.py  userDetails.py
iGOTassistant/config/: config.py
iGOTassistant/models/: callbacks.py  chat.py  userdetails.py
iGOTassistant/routes/: chat.py
iGOTassistant/tools/: cert_tools.py  faq_tools.py  otp_auth_tools.py  tools.py  userinfo_tools.py  zoho_ticket_tools.py
indexer/: input.jsonl  qdrant_indexer.py  question_answer.jsonl
qdrant_storage/: raft_state.json
src/: agent.py  main.py  prompt.py
tools/: tools.py
utils/: common_utils.py  contentCache.py  feedback_analytics.py  feedback_service.py  logging_config.py  postgresql_enrollment_service.py  redis_connection_manager.py  redis_session_service.py  request_context.py  translation_service.py  userDetails.py  utils.py  vertexContentCache.py  zoho_utils.py
(+71 files in other folders)
